multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
 containers:
 - name: nginx-container
   image: nginx
 - name: nginx-container
   image: nginx
