pod-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-env
spec:
  containers:
    - name: test-container
      image: nginx
