pod-with-port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
 containers:
 - name: demo-container
   image: nginx
   ports:
    - containerPort: 8080
