nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  selector:
    app: backend
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
